# fastapi-rust-todo-example

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  loader.py  main.py  requirements.txt  run.sh
client/: Cargo.toml  Makefile.toml  index.html  run.sh
client/src/: api.rs  app.rs  lib.rs  route.rs
client/src/components/: mod.rs  text_input.rs  todo_list.rs
client/src/pages/: login.rs  mod.rs  todo_list.rs  todo_list_page.rs
client/static/: index.html
core/: __init__.py  loader.py  middleware.py  settings.py  status.py  utils.py
nginx/: app.conf
server/: conftest.py  main.py  requirements.txt
server/core/: loader.py
server/settings/: __init__.py
server/testing/: __init__.py
server/todos/: dantic.py  tests.py  views.py
server/users/: dantic.py  models.py  tests.py  views.py
settings/: __init__.py
testing/: decorators.py
todos/: dantic.py  models.py  tests.py  views.py
users/: dantic.py  models.py  services.py  tests.py  views.py
