[package]
name = "client"
version = "0.1.0"
authors = ["mizisu <alwltn960406@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2"
anyhow = "1.0.32"
yew-router = "0.14.0"
serde = { version = "1.0", features = ["derive"] }